--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,7 +2,7 @@ group 'co.skipr.flutter_kochava_plugin'
 version '1.0-SNAPSHOT'
 
 buildscript {
-    ext.kotlin_version = '1.3.60'
+    ext.kotlin_version = '1.3.10'
     repositories {
         google()
         jcenter()
@@ -41,8 +41,8 @@ android {
 }
 
 dependencies {
-    //implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    //implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'com.kochava.base:tracker:3.7.2'
      //Required: Google Play Services Ads Identifier (If publishing to Google Play)
     implementation 'com.google.android.gms:play-services-ads-identifier:15.0.1'
