--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,7 +2,7 @@ group 'co.skipr.flutter_kochava_plugin'
 version '1.0-SNAPSHOT'
 
 buildscript {
-    ext.kotlin_version = '1.3.70'
+    ext.kotlin_version = '1.3.60'
     repositories {
         google()
         jcenter()
@@ -42,11 +42,11 @@ android {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation ('com.kochava.base:tracker:3.7.2') {
-        transitive = false
-    }
+    implementation 'com.kochava.base:tracker:3.7.2'
     //Required: Google Play Services Ads Identifier (If publishing to Google Play)
     implementation 'com.google.android.gms:play-services-ads-identifier:17.0.0'
     //Required: Install Referrer (If publishing to Google Play)
     implementation 'com.android.installreferrer:installreferrer:1.0'
+    //Optional: Instant App Status Collection
+    implementation 'com.google.android.instantapps:instantapps:1.1.0'
  }
