--- a/android/build.gradle
+++ b/android/build.gradle
@@ -18,7 +18,7 @@ rootProject.allprojects {
     repositories {
         google()
         jcenter()
-        maven {url "http://kochava.bintray.com/maven"}
+        maven {url "https://kochava.bintray.com/maven"}
     }
 }
 
